<resources>
    <string name="app_name">TMDetector1.1.12</string>
    <string name="show_triplist">Show TripList</string>
    <string name="actual_mode">Actual Mode</string>
    <string name="predicted_mode">Predicted Mode</string>
    <string name="show_derivative">Show derivative</string>
    <string-array name="modes">
        <item>still</item>
        <item>bike</item>
        <item>walk</item>
        <item>run</item>
        <item>car</item>
        <item>train</item>
        <item>tram</item>
        <item>subway</item>
        <item>ferry</item>
        <item>plain</item>
        <item>bus</item>
        <item>other</item>
    </string-array>

    <string-array name="cities">
        <item>Oslo</item>
        <item>Lisbon</item>
        <item>Rome</item>
        <item>London</item>
        <item>Berlin</item>
        <item>Munich</item>
    </string-array>

    <string-array name="roadConditions">
        <item>Asphalt</item>
        <item>Gravel road</item>
        <item>cobblestone</item>
        <item>granites setts</item>
    </string-array>
    <string name="action_upload_DB">Upload DB</string>
    <string name="dbNameHint">Enter DB name</string>
    <string name="textDesc">preferably your name</string>
    <string name="uploadDB">Upload DB</string>
    <string name="start_trip">Start trip</string>
    <string name="stop_trip">Stop trip</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="tripid">TripId</string>
    <string name="distance">Distance</string>
    <string name="list_of_legs">list Of Legs</string>
    <string name="listOfProbs">list Of Probabilities</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="show_My_Trips">My Trips</string>
    <string name="txtDescription">You are anonymously signed in \n otherwise link your account</string>
    <string name="togglebutton">ToggleButton</string>
</resources>