<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:fillViewport="false">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="50dp"
    tools:context=".DBUploadActivity">

    <EditText
        android:id="@+id/dbName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dbNameHint" />
    <TextView
        android:id="@+id/textDesc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dbName"/>

    <Button
        android:id="@+id/uploadYourdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadDB"
        android:layout_marginTop="20dp"/>
</LinearLayout>
</ScrollView>