<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpel"
    tools:context=".DetectionActivity">

    <ToggleButton
        android:id="@+id/tglBtnTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:onClick="toggleStartTrip"
        android:text="ToggleButton"
        android:textOff="@string/start_trip"
        android:textOn="@string/stop_trip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnActualMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/actual_mode"
        app:layout_constraintBaseline_toBaselineOf="@id/tglBtnTrip"
        app:layout_constraintStart_toEndOf="@id/tglBtnTrip" />


    <Button
        android:id="@+id/btnCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/city"
        app:layout_constraintBaseline_toBaselineOf="@id/tglBtnTrip"
        app:layout_constraintStart_toEndOf="@id/btnActualMode" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/purpel"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tglBtnTrip"

        tools:listitem="@android:layout/simple_selectable_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>