<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpel"
    tools:context=".ClassifierResults"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="353dp"
            android:layout_height="110dp">
            <ImageView
                android:id="@+id/imgViewStart"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_outline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.075" />

            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/start"
                app:layout_constraintStart_toEndOf="@id/imgViewStart"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txtStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@id/start"
                app:layout_constraintStart_toEndOf="@id/start"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="30dp" />


            <ImageView
                android:id="@+id/imgViewEnd"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_outline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgViewStart"
                app:layout_constraintVertical_bias="0.075" />


            <TextView
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/end"
                app:layout_constraintStart_toEndOf="@id/imgViewEnd"
                app:layout_constraintTop_toBottomOf="@id/start"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="71dp" />

            <TextView
                android:id="@+id/txtEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@id/end"
                app:layout_constraintStart_toEndOf="@id/end"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="71dp" />


            <ImageView
                android:id="@+id/imgViewTripId"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_trip_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgViewEnd"
                app:layout_constraintVertical_bias="0.075" />

            <TextView
                android:id="@+id/tripId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/tripid"
                app:layout_constraintStart_toEndOf="@id/imgViewTripId"
                app:layout_constraintTop_toBottomOf="@id/end"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="115dp" />



            <TextView
                android:id="@+id/txtTripId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@id/tripId"
                app:layout_constraintStart_toEndOf="@id/tripId"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="115dp" />


           <!-- <ImageView
                android:id="@+id/imgViewActualModes"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_actual_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgViewTripId" />

            <TextView
                android:id="@+id/actualModes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:text="Actual modes"
                app:layout_constraintStart_toEndOf="@+id/imgViewActualModes"
                app:layout_constraintTop_toBottomOf="@id/tripId" />

            <TextView
                android:id="@+id/txtActualModes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="14dp"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@id/actualModes"
                app:layout_constraintStart_toEndOf="@id/actualModes" />
-->

            <ImageView
                android:id="@+id/imgViewDistance"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_distance"
                app:layout_constraintStart_toEndOf="@id/txtTripId"
                app:layout_constraintTop_toBottomOf="@id/txtEnd"
                app:layout_constraintVertical_bias="0.075" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/distance"
                app:layout_constraintBaseline_toBaselineOf="@id/txtTripId"
                app:layout_constraintStart_toEndOf="@id/imgViewDistance"
                tools:layout_editor_absoluteX="179dp"
                tools:layout_editor_absoluteY="115dp" />

            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:text="TextView"
                app:layout_constraintBaseline_toBaselineOf="@id/distance"
                app:layout_constraintStart_toEndOf="@id/distance"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="201dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >


    <TextView
        android:id="@+id/listOfLegs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/list_of_legs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="159dp" />

        <!--<Button
            android:id="@+id/btnShowLegs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="4dp"
            android:text="Show Legs"
            app:layout_constraintStart_toEndOf="@id/listOfLegs"
            app:layout_constraintBaseline_toBaselineOf="@id/listOfLegs" />-->

           <!-- <ImageView
                android:id="@+id/imgViewLegMode"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_unknown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listOfLegs"
                app:layout_constraintVertical_bias="0.075" />-->

            <TextView
                android:id="@+id/txtListOfLegs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/listOfLegs"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="208dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >

    <TextView
        android:id="@+id/listOfProbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/listOfProbs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="159dp" />


    <TextView
        android:id="@+id/txtListOfProbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listOfProbs"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="208dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>
</ScrollView>